--- a/Dự án 1/index.html
+++ b/Dự án 1/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="head">
 
-        <a href="/">
+        <a href="./index.html">
             <div class="logo">
                 <img src="image/Cute Cat Grooming Logo.png" alt="">
 
@@ -25,7 +25,7 @@
             </div>
         </a>
         <div class="top-right">
-            <a href="Login.html"><i class='bx bx-user'></i></a>
+            <a href="./dangnhap.html"><i class='bx bx-user'></i></a>
             <a href="cart.html"><i class='bx bx-cart'></i></a>
         </div>
     </div>
@@ -89,11 +89,6 @@
 
             <div class="mySlides fade">
                 <img src="image/header2.webp " style="height: 435px;">
-
-            </div>
-
-            <div class="mySlides fade">
-                <img src="image/he.jpg" style="height: 435px;">
 
             </div>
             <a class="prev" onclick="plusSlides(-1)">❮</a>
