--- a/Dự án 1/cart.html
+++ b/Dự án 1/cart.html
@@ -15,11 +15,13 @@
 
 <body onload="napsp()">
     <div class="head">
-        <div class="logo">
-            <img src="image/Cute Cat Grooming Logo.png" alt="">
-
-            <h2> LittleCat </h2>
-        </div>
+        <a href="./index.html">
+            <div class="logo">
+                <img src="image/Cute Cat Grooming Logo.png" alt="">
+    
+                <h2> LittleCat </h2>
+            </div>
+        </a>
         <div class="top-right">
             <a href="dangnhap.html"><i class='bx bx-user'></i></a>
             <i class='bx bx-cart'></i>
