--- a/Dự án 1/index.html
+++ b/Dự án 1/index.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="./countdown.css">
-    <link rel="stylesheet" href="https://fonts.google.com/specimen/Lato">
+   
 </head>
 
 <body>
@@ -89,6 +89,11 @@
 
             <div class="mySlides fade">
                 <img src="image/header2.webp " style="height: 435px;">
+
+            </div>
+
+            <div class="mySlides fade">
+                <img width="300px" src="image/he.jpg" style="height: 435px;">
 
             </div>
             <a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -365,7 +370,7 @@ if (n > slides.length) {slideIndex = 1}
       setTimeout(showSlides, 1000);
     }
 </script>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1776.0815737413075!2d108.05522439106338!3d12.690471949969883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3171f74251e94f17%3A0x3879b05dc9401f68!2zU0nDilUgVEjhu4ogVEjDmiBDxq9ORyBDSMOTUCBQRVRTSE9Q!5e0!3m2!1svi!2s!4v1686820600156!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1776.0815737413075!2d108.05522439106338!3d12.690471949969883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3171f74251e94f17%3A0x3879b05dc9401f68!2zU0nDilUgVEjhu4ogVEjDmiBDxq9ORyBDSMOTUCBQRVRTSE9Q!5e0!3m2!1svi!2s!4v1686820600156!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 <div class="countdown-container">
     <div class="countdown-title">Thời gian còn lại cho Flash Sale:</div>
     <div class="countdown-timer">
