--- a/Dự án 1/index.html
+++ b/Dự án 1/index.html
@@ -153,7 +153,7 @@
         <div class="thucan">
             <div class="khung">
                 <div class="hinh">
-                    <a href="thongtinsp.html"> <img src="image/thucan1.jpg" alt="">
+                    <a href="./sanpham/hat-vi-ca-hoi-va-rau.html"> <img src="image/thucan1.jpg" alt="">
                     </a> </div>
                 <div class="thongtin">
                     <h3><a href="./sanpham/hat-vi-ca-hoi-va-rau.html">Hạt vị cá hồi và rau cho mèo</a> </h3> <span> Giá: 150.000 VNĐ</span>
@@ -166,10 +166,10 @@
             </div>
             <div class="khung">
                 <div class="hinh">
-                    <a href="thongtinsp.html"> <img src="image/thucan2.jpg" alt="">
+                    <a href="./sanpham/Soup-lon-vi-ga.html"> <img src="image/thucan2.jpg" alt="">
                     </a> </div>
                 <div class="thongtin">
-                    <h3><a href="thongtinsp.html">Soup lon vị gà cho mèo lớn</a> </h3> <span> Giá: 150.000 VNĐ</span>
+                    <h3><a href="./sanpham/Soup-lon-vi-ga.html">Soup lon vị gà cho mèo lớn</a> </h3> <span> Giá: 150.000 VNĐ</span>
                 </div>
                 <br>
                 <div class="nutan">
