--- a/Dự án 1/2/index-2.html
+++ b/Dự án 1/2/index-2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <div class="slidebar"></div>
+    <div class="slidebar">
         <ul class="menu">
             <li>
                 <a href="#">
@@ -72,7 +72,7 @@
                     <i class="fa-solid fa-search"></i>
                     <input type="text" placeholder="Search">
                 </div>
-                <img src="/img/profile-1.png">
+                <img src="Cho1.jpg">
             </div>
         </div>
         <div class="card--container">
