--- a/Dự án 1/index.html
+++ b/Dự án 1/index.html
@@ -246,7 +246,7 @@
                     <a href="thongtinsp.html"> <img src="image/phukien5.jpg" alt="">
                     </a> </div>
                 <div class="thongtin">
-                    <h3><a href="thongtinsp.html">Túi ngủ cho mèo</a> </h3> <span> Giá: 550.000 VNĐ</span>
+                    <h3><a href="thongtinsp.html">Khay đựng đồ ăn cho mèo</a> </h3> <span> Giá: 550.000 VNĐ</span>
                 </div>
                 <br>
                 <div class="nutan">
