--- a/Dự án 1/sanpham/do-dung-thuc-an.html
+++ b/Dự án 1/sanpham/do-dung-thuc-an.html
@@ -13,9 +13,12 @@
 
 <body>
   <div class="head">
-    <div class="logo">
-      <img src="image/Cute Cat Grooming Logo.png" alt="">
-      <h2> LittleCat </h2>
+    <a href="../index.html">
+      <div class="logo">
+        <img src="../image/Cute Cat Grooming Logo.png" alt="">
+        <h2> LittleCat </h2>
+      </div>
+    </a>
     </div>
     <div class="top-right">
       <a href="../dangnhap.html"><i class='bx bx-user'></i></a>
