--- a/Dự án 1/sanpham/thuc-an-cho-meo-zoi-cat.html
+++ b/Dự án 1/sanpham/thuc-an-cho-meo-zoi-cat.html
@@ -13,9 +13,12 @@
 
 <body>
   <div class="head">
-    <div class="logo">
-    
-    </div>
+    <a href="../index.html">
+      <div class="logo">
+        <img src="../image/Cute Cat Grooming Logo.png" alt="">
+        <h2> LittleCat </h2>
+      </div>
+    </a>
     <div class="top-right">
       <a href="../dangnhap.html"><i class='bx bx-user'></i></a>
       <a href="../cart.html"><i class='bx bx-cart'></i></a>
