--- a/Dự án 1/cart.html
+++ b/Dự án 1/cart.html
@@ -17,10 +17,9 @@
     <div class="head">
         <a href="./index.html">
             <div class="logo">
-                <img src="image/Cute Cat Grooming Logo.png" alt="">
+                <img width="90px" src="image/Cute Cat Grooming Logo.png" alt="">
+            </a>
                 <h2> LittleCat </h2>
-            </div>
-        </a>
         <div class="top-right">
             <a href="dangnhap.html"><i class='bx bx-user'></i></a>
             <i class='bx bx-cart'></i>
@@ -31,7 +30,7 @@
 
         <div class="menu">
             <li><a href="index.html">Trang Chủ </a></li>
-            <li><a href="">Liên Hệ</a></li>
+            <li><a href="./lien-he.html">Liên Hệ</a></li>
             <li><a href="">Sản Phẩm</a>
                 <ul class="menucon">
                     <li>Thức Ăn Cho Mèo</li>
@@ -51,7 +50,7 @@
     <div class="thongbao">
         <h2 style="font-family: monospace ; font-size: xx-large;">GIỎ HÀNG CỦA BẠN</h2>
     </div>
-    <article>
+    <div class="bang-thanh-toan" >
         <table border="1">
             <thead>
                 <tr>
@@ -71,9 +70,9 @@
             <td id="gia">350.000VNĐ</td>
             
           </tr>
-
-            </tbody>
+        </tbody>
         </table>
+        <br>    
         <div class="tongtien">
             Tổng tiền :
             <span id="tongtien">
@@ -81,8 +80,10 @@
             </span>
         </div>
     </article>
-
-
+    </div>
+    <br>
+    <br>
+    <article>
     <footer>
         <div class="tuvan">
             <h1>Tư Vấn Mua Hàng Cùng LittleCat</h1>
