--- a/Dự án 1/index.html
+++ b/Dự án 1/index.html
@@ -19,11 +19,10 @@
 
         <a href="./index.html">
             <div class="logo">
-                <img src="image/Cute Cat Grooming Logo.png" alt="">
-
+                <img width="90px" src="image/Cute Cat Grooming Logo.png" alt="">
+            </a>
                 <h2> LittleCat </h2>
             </div>
-        </a>
         <div class="top-right">
             <a href="./dangnhap.html"><i class='bx bx-user'></i></a>
             <a href="cart.html"><i class='bx bx-cart'></i></a>
@@ -33,7 +32,7 @@
     <nav>
         <ul class="menu">
             <li><a href="">Trang Chủ</a></li>
-            <li><a href="">Liên Hệ</a></li>
+            <li><a href="./lien-he.html">Liên Hệ</a></li>
             <li>
                 <a href="">Sản Phẩm</a>
                 <ul class="menucon">
@@ -179,10 +178,10 @@
             </div>
             <div class="khung">
                 <div class="hinh">
-                    <a href="thongtinsp.html"> <img src="image/thucan3.jpg" alt="">
+                    <a href="./sanpham/hat-vi-ca-thu.html"> <img src="image/thucan3.jpg" alt="">
                     </a> </div>
                 <div class="thongtin">
-                    <h3><a href="thongtinsp.html">Hạt vị cá thu</a> </h3> <span> Giá: 150.000 VNĐ</span>
+                    <h3><a href="./sanpham/hat-vi-ca-thu.html">Hạt vị cá thu</a> </h3> <span> Giá: 150.000 VNĐ</span>
                 </div>
                 <br>
                 <div class="nutan">
@@ -192,10 +191,10 @@
             </div>
             <div class="khung">
                 <div class="hinh">
-                    <a href="thongtinsp.html"> <img src="image/thucan4.jpg" alt="">
+                    <a href="./sanpham/hat-vi-tong-hop.html"> <img src="image/thucan4.jpg" alt="">
                     </a> </div>
                 <div class="thongtin">
-                    <h3><a href="thongtinsp.html">Hạt vị tổng hợp</a> </h3> <span> Giá: 150.000 VNĐ</span>
+                    <h3><a href="./sanpham/hat-vi-tong-hop.html">Hạt vị tổng hợp</a> </h3> <span> Giá: 150.000 VNĐ</span>
                 </div>
                 <br>
                 <div class="nutan">
