--- a/Dự án 1/sanpham/thuc-an-cho-meo-tuna.html
+++ b/Dự án 1/sanpham/thuc-an-cho-meo-tuna.html
@@ -15,10 +15,9 @@
   <div class="head">
     <a href="../index.html">
       <div class="logo">
-        <img src="../image/Cute Cat Grooming Logo.png" alt="">
-        <h2> LittleCat </h2>
-      </div>
-    </a>
+          <img width="90px" src="../image/Cute Cat Grooming Logo.png" alt="">
+      </a>
+          <h2> LittleCat </h2>
     <div class="top-right">
       <a href="../dangnhap.html"><i class='bx bx-user'></i></a>
       <a href="../cart.html"><i class='bx bx-cart'></i></a>
