--- a/Dự án 1/index.html
+++ b/Dự án 1/index.html
@@ -34,7 +34,7 @@
             <li><a href="">Trang Chủ</a></li>
             <li><a href="./lien-he.html">Liên Hệ</a></li>
             <li>
-                <a href="">Sản Phẩm</a>
+                <a href="./sanpham.html">Sản Phẩm</a>
                 <ul class="menucon">
                     <li>Thức Ăn Cho Mèo</li>
                     <li>Phụ Kiện Cho Mèo</li>
