--- a/Dự án 1/cart.html
+++ b/Dự án 1/cart.html
@@ -31,7 +31,7 @@
         <div class="menu">
             <li><a href="index.html">Trang Chủ </a></li>
             <li><a href="./lien-he.html">Liên Hệ</a></li>
-            <li><a href="">Sản Phẩm</a>
+            <li><a href="./sanpham.html">Sản Phẩm</a>
                 <ul class="menucon">
                     <li>Thức Ăn Cho Mèo</li>
                     <li>Phụ Kiện Cho Mèo</li>
