--- a/Dự án 1/lien-he.html
+++ b/Dự án 1/lien-he.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/lien-he.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
     <div class="head">
@@ -28,7 +31,7 @@
             <li><a href="">Trang Chủ</a></li>
             <li><a href="./lien-he.html">Liên Hệ</a></li>
             <li>
-                <a href="">Sản Phẩm</a>
+                <a href="./sanpham.html">Sản Phẩm</a>
                 <ul class="menucon">
                     <li>Thức Ăn Cho Mèo</li>
                     <li>Phụ Kiện Cho Mèo</li>
