--- a/Dự án 1/sanpham.html
+++ b/Dự án 1/sanpham.html
@@ -28,7 +28,7 @@
 
     <nav>
         <ul class="menu">
-            <li><a href="">Trang Chủ</a></li>
+            <li><a href="./index.html">Trang Chủ</a></li>
             <li><a href="./lien-he.html">Liên Hệ</a></li>
             <li>
                 <a href="">Sản Phẩm</a>
@@ -238,6 +238,53 @@
     
             </div>
     </div> 
+    <footer>
+        <div class="tuvan">
+            <h1>Tư Vấn Mua Hàng Cùng LittleCat</h1>
+            <input type="text" placeholder="Họ và tên ...">
+            <input type="text" placeholder="Số điện thoại ...">
+
+            <button>Gửi Liên Hệ</button>
+        </div>
+        <div class="end">
+
+
+            <div class="about">
+                <h3><a href="thongtinsp.html">HỖ TRỢ KHÁCH HÀNG</a></h3><br>
+                <li>Hoạt động từ 8h – 21h hàng ngày: 0123456789</li>
+                <li>Hỗ trợ đơn hàng online: 8h – 17h, Thứ Hai đến Thứ Bảy: 0123456789</li>
+                <li>Phương thức thanh toán</li>
+                <li>Phương thức giao hàng</li>
+                <li>Hướng dẫn đổi trả hàng</li>
+                <li>Hướng dẫn mua hàng</li>
+                <li>Câu hỏi thường gặp</li>
+                <li>Chính sách hàng nhập khẩu</li>
+
+            </div>
+            <div class="thongtinbanquyen">
+                <h3><a href="thongtinsp.html">VỀ LITTLECAT</a></h3><br>
+                <li>Liên hệ</li>
+                <li>Tuyển dụng</li>
+                <li>Mua phụ kiện cho thú cưng</li>
+                <li>Blog Boss và Sen</li>
+                <li>Blog Thú cưng</li>
+                <li>Cát vệ sinh cho mèo</li>
+                <li>Đồ chơi cho mèo</li>
+
+            </div>
+            <div class="hotro">
+                <h3><a href="thongtinsp.html">HỢP TÁC VÀ LIÊN KẾT</a></h3><br>
+                <li>Quy chế hoạt động của LittleCat</li>
+                <li>Bán hàng cùng LittleCat</li>
+                <img src="image/Cute Cat Grooming Logo.png" alt="">
+
+            </div>
+        </div>
+
+        <div class="banquyen">
+            <a href="">Bản quyền © 2023 CÔNG TY TNHH LITTLECAT VIỆT NAM – Giấy phép ĐKKD số 0123456</a>
+        </div>
+    </footer>
     <script src="./js/index.js"></script>
 </body>
 </html>
