--- a/Dự án 1/sanpham/hat-vi-tong-hop.html
+++ b/Dự án 1/sanpham/hat-vi-tong-hop.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../css/thongtin.css">
   <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+  <link rel="stylesheet" href="../css/sanpham.css">
 </head>
 
 <body>
@@ -60,6 +61,11 @@
       <br>
       <input type="button" value="Thêm Vào Giỏ Hàng" onclick="addCart(this, 8, 'Hạt vị cá thu', 150000, 'image/thucan4.jpg', 1)">
       <input type="button" value="Mua Ngay">
+      
+      <div id="popup" class="popup">
+        Đã thêm vào giỏ hàng thành công
+      </div>
+      
       <br>
       <div class="soluong">
         <input type="number" placeholder="Số Lượng" step="1" min="1" value="1">
