--- a/Dự án 1/sanpham/Soup-lon-vi-ga.html
+++ b/Dự án 1/sanpham/Soup-lon-vi-ga.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../css/thongtin.css">
   <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+  <link rel="stylesheet" href="../css/sanpham.css">
 </head>
 
 <body>
@@ -57,9 +58,16 @@
       <h3>Soup lon vị gà cho mèo trưởng thành</h3>
       <span> Giá: 50.000 vnđ</span> <br>
       <span>Lượt Xem : 323</span> <i class="ri-eye-line"></i>
+
       <br>
       <input type="button" value="Thêm Vào Giỏ Hàng" onclick="addCart(this, 6, 'Soup lon vị gà cho mèo trưởng thành', 100000, 'image/thucan2.jpg', 1)">
       <input type="button" value="Mua Ngay">
+      
+      <div id="popup" class="popup">
+        Đã thêm vào giỏ hàng thành công
+      </div>
+
+
       <br>
       <div class="soluong">
         <input type="number" placeholder="Số Lượng" step="1" min="1" value="1">
