--- a/Dự án 1/sanpham/thuc-an-cho-meo-tuna.html
+++ b/Dự án 1/sanpham/thuc-an-cho-meo-tuna.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../css/thongtin.css">
   <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+  <link rel="stylesheet" href="../css/sanpham.css">
 </head>
 
 <body>
@@ -61,6 +62,11 @@
       <input type="button" value="Thêm Vào Giỏ Hàng" onclick="addCart(this, 1, 'Thức ăn cho mèo Tuna', 150000, 'image/thucan5.webp', 1)">
       <input type="button" value="Mua Ngay">
       <br>
+
+      <div id="popup" class="popup">
+        Đã thêm vào giỏ hàng thành công
+      </div>
+      
       <div class="soluong">
         <input type="number" placeholder="Số Lượng" step="1" min="1" value="1">
       </div>
