--- a/Dự án 1/checkout.html
+++ b/Dự án 1/checkout.html
@@ -85,7 +85,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="coupon-accordion">
-                            <h3>Bạn chưa có tài khoản? <a href="./dangnhap.html"><span id="showlogin">Nhấn vào đây để đăng nhập</span></a></h3>
+                            <h3>Bạn chưa đăng nhập? <a href="./dangnhap.html"><span id="showlogin">Nhấn vào đây để đăng nhập</span></a></h3>
                             <div id="checkout-login" class="coupon-content">
                                 <div class="coupon-info">
                                     <p class="coupon-text">Quisque gravida turpis sit amet nulla posuere lacinia. Cras sed est
