--- a/Dự án 1/blog.html
+++ b/Dự án 1/blog.html
@@ -43,10 +43,105 @@
                 <a class="tk" href=""><i class='bx bx-search'></i></a>
             </div>
         </ul>
-       <header>
-        <div class="slideshow-container">
-            <img src="./image/New Project.png" alt="">
-       </header>
     </nav>
+    <article>
+        <div class="khung">
+            <div class="hinh">
+                <a href="sanpham/thuc-an-cho-meo-tuna.html"><img width="75px" src="image/FELV-cat.jpg" alt="">
+                </a></div>
+            <div class="thongtin">
+                <h3><a href="sanpham/thuc-an-cho-meo-tuna.html">Chỉ người nuôi mèo mới hiểu những chuyện cười ra nước mắt này</a></h3>
+            </div>    
+        </div>
+        <div class="khung">
+            <div class="hinh">
+                <a href="sanpham/thuc-an-cho-meo-tuna.html"><img src="image/paisley.jpg" alt="">
+                </a></div>
+            <div class="thongtin">
+                <h3><a href="sanpham/thuc-an-cho-meo-tuna.html">Paisley, chú mèo béo nhất nước Anh không thể liếm lông mình.</a></h3>
+            </div>     
+        </div>
+        <div class="khung">
+            <div class="hinh">
+                <a href="sanpham/thuc-an-cho-meo-tuna.html"><img src="image/shiba.jpg" alt="">
+                </a></div>
+            <div class="thongtin">
+                <h3><a href="sanpham/thuc-an-cho-meo-tuna.html">Điểm đặc biệt của chú chó được vào vai cậu Vàng là gì</a></h3>
+            </div>    
+        </div>
+    </article>
+    <article>
+        <div class="khung">
+            <div class="hinh">
+                <a href="sanpham/thuc-an-cho-meo-tuna.html"><img width="75px" src="image/FELV-cat.jpg" alt="">
+                </a></div>
+            <div class="thongtin">
+                <h3><a href="sanpham/thuc-an-cho-meo-tuna.html">Chỉ người nuôi mèo mới hiểu những chuyện cười ra nước mắt này</a></h3>
+            </div>    
+        </div>
+        <div class="khung">
+            <div class="hinh">
+                <a href="sanpham/thuc-an-cho-meo-tuna.html"><img src="image/paisley.jpg" alt="">
+                </a></div>
+            <div class="thongtin">
+                <h3><a href="sanpham/thuc-an-cho-meo-tuna.html">Paisley, chú mèo béo nhất nước Anh không thể liếm lông mình.</a></h3>
+            </div>     
+        </div>
+        <div class="khung">
+            <div class="hinh">
+                <a href="sanpham/thuc-an-cho-meo-tuna.html"><img src="image/shiba.jpg" alt="">
+                </a></div>
+            <div class="thongtin">
+                <h3><a href="sanpham/thuc-an-cho-meo-tuna.html">Điểm đặc biệt của chú chó được vào vai cậu Vàng là gì</a></h3>
+            </div>    
+        </div>
+    </article>
+    <footer>
+        <div class="tuvan">
+            <h1>Tư Vấn Mua Hàng Cùng LittleCat</h1>
+            <input type="text" placeholder="Họ và tên ...">
+            <input type="text" placeholder="Số điện thoại ...">
+
+            <button>Gửi Liên Hệ</button>
+        </div>
+        <div class="end">
+
+
+            <div class="about">
+                <h3><a href="thongtinsp.html">HỖ TRỢ KHÁCH HÀNG</a></h3><br>
+                <li>Hoạt động từ 8h – 21h hàng ngày: 0123456789</li>
+                <li>Hỗ trợ đơn hàng online: 8h – 17h, Thứ Hai đến Thứ Bảy: 0123456789</li>
+                <li>Phương thức thanh toán</li>
+                <li>Phương thức giao hàng</li>
+                <li>Hướng dẫn đổi trả hàng</li>
+                <li>Hướng dẫn mua hàng</li>
+                <li>Câu hỏi thường gặp</li>
+                <li>Chính sách hàng nhập khẩu</li>
+
+            </div>
+            <div class="thongtinbanquyen">
+                <h3><a href="thongtinsp.html">VỀ LITTLECAT</a></h3><br>
+                <li>Liên hệ</li>
+                <li>Tuyển dụng</li>
+                <li>Mua phụ kiện cho thú cưng</li>
+                <li>Blog Boss và Sen</li>
+                <li>Blog Thú cưng</li>
+                <li>Cát vệ sinh cho mèo</li>
+                <li>Đồ chơi cho mèo</li>
+
+            </div>
+            <div class="hotro">
+                <h3><a href="thongtinsp.html">HỢP TÁC VÀ LIÊN KẾT</a></h3><br>
+                <li>Quy chế hoạt động của LittleCat</li>
+                <li>Bán hàng cùng LittleCat</li>
+                <img src="image/Cute Cat Grooming Logo.png" alt="">
+
+            </div>
+        </div>
+
+        <div class="banquyen">
+            <a href="">Bản quyền © 2023 CÔNG TY TNHH LITTLECAT VIỆT NAM – Giấy phép ĐKKD số 0123456</a>
+        </div>
+    </footer>
 </body>
 </html>
