--- a/duan1/index.html
+++ b/duan1/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LittleCat</title>
-    <link rel="stylesheet" href="css/style.css">
-    
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <script src="https://unpkg.com/scrollreveal"></script>
-   
+
+
    
 </head>
 
@@ -101,13 +101,13 @@
             <br>
             <div class="nutan">
                 <a href="sanpham/thuc-an-cho-meo-tuna.php"><input type="button" value="Thông Tin Chi Tiết"></a>
-                <div class="rating">
-                    <span class="star" data-value="1">&#9733;</span>
-                    <span class="star" data-value="2">&#9733;</span>
-                    <span class="star" data-value="3">&#9733;</span>
-                    <span class="star" data-value="4">&#9733;</span>
-                    <span class="star" data-value="5">&#9733;</span>
-                  </div>
+                <div class="rate">
+                    <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                    <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                    <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                    <span style="font-size:120%;color:rgb(0, 0, 0);">&starf;</span>
+                    <span style="font-size:120%;color:rgb(0, 0, 0);">&starf;</span>
+                </div>
             </div>
         </div>
         <div class="khung">
@@ -120,7 +120,13 @@
             <br>
             <div class="nutan">
                 <a href="sanpham/do-dung-thuc-an.php"><input type="button" value="Thông Tin Chi Tiết"></a>
-
+                <div class="rate">
+                    <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                    <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                    <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                    <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                    <span style="font-size:120%;color:rgb(0, 0, 0);">&starf;</span>
+                </div>
 
             </div>
         </div>
@@ -135,6 +141,13 @@
             <br>
             <div class="nutan">
                 <a href="sanpham/thuc-an-cho-meo-zoi-cat.php"><input type="button" value="Thông Tin Chi Tiết"></a>
+                <div class="rate">
+                    <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                    <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                    <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                    <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                    <span style="font-size:120%;color:rgb(0, 0, 0);">&starf;</span>
+                </div>
             </div>
         </div>
         <div class="khung">
@@ -147,6 +160,13 @@
             <br>
             <div class="nutan">
                 <a href="sanpham/cat-ve-sinh-aatas.php"><input type="button" value="Thông Tin Chi Tiết"></a>
+                <div class="rate">
+                    <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                    <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                    <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                    <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                    <span style="font-size:120%;color:rgb(0, 0, 0);">&starf;</span>
+                </div>
             </div>
         </div>
 
@@ -169,7 +189,13 @@
                 <br>
                 <div class="nutan">
                     <input type="button" value="Thông Tin Chi Tiết">
-
+                    <div class="rate">
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(0, 0, 0);">&starf;</span>
+                    </div>
                 </div>
             </div>
             <div class="khung">
@@ -182,7 +208,13 @@
                 <br>
                 <div class="nutan">
                     <input type="button" value="Thông Tin Chi Tiết">
-
+                    <div class="rate">
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(0, 0, 0);">&starf;</span>
+                    </div>
                 </div>
             </div>
             <div class="khung">
@@ -195,7 +227,13 @@
                 <br>
                 <div class="nutan">
                     <input type="button" value="Thông Tin Chi Tiết">
-
+                    <div class="rate">
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(0, 0, 0);">&starf;</span>
+                    </div>
                 </div>
             </div>
             <div class="khung">
@@ -208,7 +246,13 @@
                 <br>
                 <div class="nutan">
                     <input type="button" value="Thông Tin Chi Tiết">
-
+                    <div class="rate">
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(0, 0, 0);">&starf;</span>
+                    </div>
                 </div>
             </div>
 
@@ -233,7 +277,13 @@
                 <br>
                 <div class="nutan">
                     <input type="button" value="Thông Tin Chi Tiết">
-
+                    <div class="rate">
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(0, 0, 0);">&starf;</span>
+                    </div>
                 </div>
             </div>
             <div class="khung">
@@ -246,7 +296,13 @@
                 <br>
                 <div class="nutan">
                     <input type="button" value="Thông Tin Chi Tiết">
-
+                    <div class="rate">
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(0, 0, 0);">&starf;</span>
+                    </div>
                 </div>
             </div>
             <div class="khung">
@@ -259,7 +315,13 @@
                 <br>
                 <div class="nutan">
                     <input type="button" value="Thông Tin Chi Tiết">
-
+                    <div class="rate">
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(0, 0, 0);">&starf;</span>
+                    </div>
                 </div>
             </div>
             <div class="khung">
@@ -272,7 +334,13 @@
                 <br>
                 <div class="nutan">
                     <input type="button" value="Thông Tin Chi Tiết">
-
+                    <div class="rate">
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
+                        <span style="font-size:120%;color:rgb(0, 0, 0);">&starf;</span>
+                    </div>
                 </div>
             </div>
 
