--- a/duan1/blog.html
+++ b/duan1/blog.html
@@ -47,10 +47,10 @@
     <article>
         <div class="khung">
             <div class="hinh">
-                <a href="sanpham/thuc-an-cho-meo-tuna.html"><img width="75px" src="image/FELV-cat.jpg" alt="">
+                <a href="./blog/page1.html"><img width="75px" src="image/FELV-cat.jpg" alt="">
                 </a></div>
             <div class="thongtin">
-                <h3><a href="sanpham/thuc-an-cho-meo-tuna.html">Chỉ người nuôi mèo mới hiểu những chuyện cười ra nước mắt này</a></h3>
+                <h3><a href="./blog/page1.html">Chỉ người nuôi mèo mới hiểu những chuyện cười ra nước mắt này</a></h3>
             </div>    
         </div>
         <div class="khung">
