--- a/duan1/index.html
+++ b/duan1/index.html
@@ -101,7 +101,7 @@
             <br>
             <div class="nutan">
                 <a href="sanpham/thuc-an-cho-meo-tuna.php"><input type="button" value="Thông Tin Chi Tiết"></a>
-                <div class="rate">
+                <div class="rating">
                     <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                     <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                     <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -120,7 +120,7 @@
             <br>
             <div class="nutan">
                 <a href="sanpham/do-dung-thuc-an.php"><input type="button" value="Thông Tin Chi Tiết"></a>
-                <div class="rate">
+                <div class="rating">
                     <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                     <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                     <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -141,7 +141,7 @@
             <br>
             <div class="nutan">
                 <a href="sanpham/thuc-an-cho-meo-zoi-cat.php"><input type="button" value="Thông Tin Chi Tiết"></a>
-                <div class="rate">
+                <div class="rating">
                     <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                     <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                     <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -160,7 +160,7 @@
             <br>
             <div class="nutan">
                 <a href="sanpham/cat-ve-sinh-aatas.php"><input type="button" value="Thông Tin Chi Tiết"></a>
-                <div class="rate">
+                <div class="rating">
                     <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                     <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                     <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -189,7 +189,7 @@
                 <br>
                 <div class="nutan">
                     <input type="button" value="Thông Tin Chi Tiết">
-                    <div class="rate">
+                    <div class="rating">
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -208,7 +208,7 @@
                 <br>
                 <div class="nutan">
                     <input type="button" value="Thông Tin Chi Tiết">
-                    <div class="rate">
+                    <div class="rating">
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -227,7 +227,7 @@
                 <br>
                 <div class="nutan">
                     <input type="button" value="Thông Tin Chi Tiết">
-                    <div class="rate">
+                    <div class="rating">
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -246,7 +246,7 @@
                 <br>
                 <div class="nutan">
                     <input type="button" value="Thông Tin Chi Tiết">
-                    <div class="rate">
+                    <div class="rating">
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -277,7 +277,7 @@
                 <br>
                 <div class="nutan">
                     <input type="button" value="Thông Tin Chi Tiết">
-                    <div class="rate">
+                    <div class="rating">
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -296,7 +296,7 @@
                 <br>
                 <div class="nutan">
                     <input type="button" value="Thông Tin Chi Tiết">
-                    <div class="rate">
+                    <div class="rating">
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -315,7 +315,7 @@
                 <br>
                 <div class="nutan">
                     <input type="button" value="Thông Tin Chi Tiết">
-                    <div class="rate">
+                    <div class="rating">
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -334,7 +334,7 @@
                 <br>
                 <div class="nutan">
                     <input type="button" value="Thông Tin Chi Tiết">
-                    <div class="rate">
+                    <div class="rating">
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
