--- a/duan1/sanpham.html
+++ b/duan1/sanpham.html
@@ -39,7 +39,7 @@
                     <li>Thời Trang Mèo</li>
                 </ul>
             </li>
-            <li><a href="">Blog</a></li>
+            <li><a href="./blog.html">Blog</a></li>
             <div class="search">
                 <input type="text" placeholder="Bạn muốn tìm gì?">
                 <a class="tk" href=""><i class='bx bx-search'></i></a>
@@ -69,7 +69,7 @@
                 <br>
                 <div class="nutan">
                     <a href="sanpham/thuc-an-cho-meo-tuna.php"><input type="button" value="Thông Tin Chi Tiết"></a>
-                    <div class="rate">
+                    <div class="rating">
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -88,7 +88,7 @@
                 <br>
                 <div class="nutan">
                     <a href="sanpham/do-dung-thuc-an.php"><input type="button" value="Thông Tin Chi Tiết"></a>
-                    <div class="rate">
+                    <div class="rating">
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -109,7 +109,7 @@
                 <br>
                 <div class="nutan">
                     <a href="sanpham/thuc-an-cho-meo-zoi-cat.php"><input type="button" value="Thông Tin Chi Tiết"></a>
-                    <div class="rate">
+                    <div class="rating">
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -128,7 +128,7 @@
                 <br>
                 <div class="nutan">
                     <a href="sanpham/cat-ve-sinh-aatas.php"><input type="button" value="Thông Tin Chi Tiết"></a>
-                    <div class="rate">
+                    <div class="rating">
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                         <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -157,7 +157,7 @@
                     <br>
                     <div class="nutan">
                         <input type="button" value="Thông Tin Chi Tiết">
-                        <div class="rate">
+                        <div class="rating">
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -176,7 +176,7 @@
                     <br>
                     <div class="nutan">
                         <input type="button" value="Thông Tin Chi Tiết">
-                        <div class="rate">
+                        <div class="rating">
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -195,7 +195,7 @@
                     <br>
                     <div class="nutan">
                         <input type="button" value="Thông Tin Chi Tiết">
-                        <div class="rate">
+                        <div class="rating">
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -214,7 +214,7 @@
                     <br>
                     <div class="nutan">
                         <input type="button" value="Thông Tin Chi Tiết">
-                        <div class="rate">
+                        <div class="rating">
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -243,7 +243,7 @@
                     <br>
                     <div class="nutan">
                         <input type="button" value="Thông Tin Chi Tiết">
-                        <div class="rate">
+                        <div class="rating">
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -262,7 +262,7 @@
                     <br>
                     <div class="nutan">
                         <input type="button" value="Thông Tin Chi Tiết">
-                        <div class="rate">
+                        <div class="rating">
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -281,7 +281,7 @@
                     <br>
                     <div class="nutan">
                         <input type="button" value="Thông Tin Chi Tiết">
-                        <div class="rate">
+                        <div class="rating">
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
@@ -300,7 +300,7 @@
                     <br>
                     <div class="nutan">
                         <input type="button" value="Thông Tin Chi Tiết">
-                        <div class="rate">
+                        <div class="rating">
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
                             <span style="font-size:120%;color:rgb(255, 196, 0);">&starf;</span>
