--- a/duan1/checkout.html
+++ b/duan1/checkout.html
@@ -171,6 +171,28 @@
                                             <input placeholder="" type="text">
                                         </div>
                                     </div>
+
+                                    <div class="col-md-12">
+                                        <div class="checkout-form-list">
+                                            <label>Phương thức thanh toán<span class="required">*</span></label>
+                                            <div class="custom-control custom-radio">
+                                                <input id="httt-1" name="httt_ma" type="radio" class="custom-control-input" required=""
+                                                    value="1">
+                                                <label class="custom-control-label" for="httt-1">Tiền mặt</label>
+                                            </div>
+                                            <div class="custom-control custom-radio">
+                                                <input id="httt-2" name="httt_ma" type="radio" class="custom-control-input" required=""
+                                                    value="2">
+                                                <label class="custom-control-label" for="httt-2">Chuyển khoản</label>
+                                            </div>
+                                            <div class="custom-control custom-radio">
+                                                <input id="httt-3" name="httt_ma" type="radio" class="custom-control-input" required=""
+                                                    value="3">
+                                                <label class="custom-control-label" for="httt-3">Ship COD</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    
                                     <div class="col-md-12">
                                         <div class="checkout-form-list create-acc">
                                             <input id="cbox" type="checkbox">
