--- a/duan1/index.html
+++ b/duan1/index.html
@@ -26,7 +26,7 @@
             </div>
         <div class="top-right">
             <a href="./dangnhap.html"><i class='bx bx-user'></i></a>
-            <a href="cart.php"><i class='bx bx-cart'></i></a>
+            <a href="cart.html"><i class='bx bx-cart'></i></a>
         </div>
     </div>
 
