--- a/duan1/checkout.html
+++ b/duan1/checkout.html
@@ -72,7 +72,7 @@
                         <li>Thời Trang Mèo</li>
                     </ul>
                 </li>
-                <li><a href="">Blog</a></li>
+                <li><a href="./css/blog.css">Blog</a></li>
                 <div class="search">
                     <input type="text" placeholder="Bạn muốn tìm gì?">
                     <a class="tk" href=""><i class='bx bx-search'></i></a>
